<resources>
    <string name="app_name">Vegan Diet Facts Quiz</string>
    <string name="intro_text">Thinking about going vegan? Want to stop annoying your vegan friends with silly questions?\n\nThis is a quiz to help you better understand a vegan diet powered by the Vegan Society.</string>
    <string name="question_1_text">1. Which of these vitamins is likely to be lacking in a vegan diet?</string>
    <string name="question_1_option_a">Vitamin E</string>
    <string name="question_1_option_b">Vitamin C</string>
    <string name="question_1_option_c">Vitamin B12</string>
    <string name="question_1_option_d">Fiber</string>
    <string name="question_2_text">2. Beans and legumes are plant-based sources of iron. Which of these contains the most iron?</string>
    <string name="question_2_option_a">Kidney beans</string>
    <string name="question_2_option_b">Lentils</string>
    <string name="question_2_option_c">Lima beans</string>
    <string name="question_2_option_d">Fiber</string>
    <string name="question_2_option_e">Chickpeas</string>
    <string name="question_3_text">3. Honey is a plant food?</string>
    <string name="question_3_option_a">True</string>
    <string name="question_3_option_b">False</string>
    <string name="question_4_text">4. Soy foods are a good source of calcium.</string>
    <string name="question_4_option_a">Sometimes</string>
    <string name="question_4_option_b">Always</string>
    <string name="question_4_option_c">Never</string>
    <string name="question_5_text">5. It\'s difficult to obtain sufficient vitamin D from plant foods.</string>
    <string name="question_5_option_a">True</string>
    <string name="question_5_option_b">False</string>
    <string name="question_6_text">6. Which of these seeds are richest in healthy omega-3 fats?</string>
    <string name="question_6_option_a">Pumpkin</string>
    <string name="question_6_option_b">Flax</string>
    <string name="question_6_option_c">Sunflower</string>
    <string name="question_7_text">7. A vegan or vegetarian diet is bound to be healthy.</string>
    <string name="question_7_option_a">True</string>
    <string name="question_7_option_b">False</string>
    <string name="question_8_text">8. Which of these vegan sources are rich in calcium?</string>
    <string name="question_8_option_a">Kale</string>
    <string name="question_8_option_b">Pak Choi</string>
    <string name="question_8_option_c">Okra</string>
    <string name="question_8_option_d">Spring Greens</string>
    <string name="question_8_option_e">Dried Figs</string>
    <string name="question_8_option_f">Chia Seeds</string>
    <string name="question_8_option_g">Red Peppers</string>
    <string name="button_text">Submit</string>
    <string name="subtitle">Test your vegan IQ</string>
    <string name="modal_main_text">Well done, %1$s!</string>
    <string name="modal_sub_text">You scored: </string>
    <string name="q1_answer">c) Vitamin B12 is likely to fall short in diets made up solely of plant foods, as its main food sources are meat and fish. Some foods, including some nutritional yeasts and meat substitutes, may contain added B12, which would be listed on their labels. However, supplements of B12 are often recommended as a reliable source of the vitamin.</string>
    <string name="q2_answer">b) Cooked, per cup, lentils contain 6.6 mg, compared to 5.2 mg in kidney beans, 4.7 mg in chickpeas, and 4.5 mg in lima beans.</string>
    <string name="q3_answer">b) Although the basic material for honey, nectar, comes from flowers, it doesn\'t naturally turn into honey. After bees collect nectar, enzymes and proteins in their stomachs convert it into honey, so honey is an animal product.</string>
    <string name="q4_answer">a) Soy foods are a good source of calcium only when they are enriched with the mineral. Checking the label of a specific product is the only way to tell whether or not it contains added calcium.</string>
    <string name="q5_answer">a) Fish is the main food source of vitamin D, and cow\'s milk enriched with the vitamin is another. Vegetarians who eat dairy products can get vitamin D from milk and yogurt. Egg yolks, for those who eat them, are another source. For anyone following a purely plant-based diet, some plant foods have added vitamin D (check labels), and vegan vitamin D supplements are available.</string>
    <string name="q6_answer">b) Flax seeds, which need to be ground, are the richest plant sources of omega-3 fats. Chia seeds are a close second.</string>
    <string name="q7_answer">b) A diet that omits animal foods but is high in refined carbohydrates and sugar is not healthy. A wholesome vegan diet is rich in a variety of vegetables and fruits and contains legumes, plant sources of fats (such as nuts, seeds, and avocados), and a variety of whole grains. Some vegetarians might also eat dairy products and eggs.</string>
    <string name="q8_answer">All excluding g) Good sources of calcium include kale, pak choi, okra, spring greens, dried figs, chia seeds and almonds. Red peppers are a great source of vitamin C, but contain very little calcium.</string>
    <string name="enter_name_hint">Start by entering your first name</string>
    <string name="modal_guesses">0</string>
    <string name="modal_out_of">out of 8</string>
    <string name="modal_see_ans_button_text">See answers</string>
    <string name="modal_back_to_quiz">Back to quiz</string>
    <string name="toast_message_none">You didn\'t get any correct answers!</string>
    <string name="toast_message_singular">You got %1$d correct answer!</string>
    <string name="toast_message_plural">You got %1$d correct answers!</string>
    <string name="q3_enter_answer_hint">Yes or No</string>

    // content descriptions
    <string name="content_desc_arrow_dow">Arrow pointing downwards</string>
    <string name="content_vegan_soc_logo">Vegan wSociety Logo</string>
    <string name="content_desc_vitamins">A bunch of spread vitamin pills</string>
    <string name="content_desc_legumes">Showcases different types of legumes</string>
    <string name="content_desc_honey">A jar of honey</string>
    <string name="content_desc_soy_produce">A variety of soy products</string>
    <string name="content_desc_mushrooms">A closeup mushroom</string>
    <string name="content_desc_omega_seeds">A grouping of seeds that are rich in omega3</string>
    <string name="content_desc_veg_diet">Mixture of vegetables</string>
    <string name="content_desc_veg_questions">Vegetables surrounding a question mark</string>
    <string name="content_desc_tomato">picture of a tomato</string>

</resources>
